added oled theme

--- a/settings.html
+++ b/settings.html
@@ -79,11 +79,12 @@
                 <div>
                     <h3 id="theme">Theme</h3>
                     <div class="setting" style="display: flex; gap: 10px; align-items: center; flex-wrap: wrap;">
+                        <button class="ball" style="background-color: #ffffff; color: #000000" onclick="setSetting('theme', 'theme-epaper');loadSettings()">ePaper</button>
                         <button class="ball" style="background-color: #ffffff; color: #3c3c3c" onclick="setSetting('theme', 'theme-light');loadSettings()">Light</button>
                         <button class="ball" style="background-color: #f5eacb; color: #4b3a25" onclick="setSetting('theme', 'theme-cream');loadSettings()">Cream</button>
                         <button class="ball" style="background-color: #303030; color: #dddddd" onclick="setSetting('theme', 'theme-dark');loadSettings()">Dark</button>
                         <button class="ball" style="background-color: #1c1a17; color: #e0d6c0" onclick="setSetting('theme', 'theme-cream-dark');loadSettings()">Coffee</button>
-                        <button class="ball" style="background-color: #ffffff; color: #000000" onclick="setSetting('theme', 'theme-epaper');loadSettings()">ePaper</button>
+                        <button class="ball" style="background-color: #000000; color: #888888" onclick="setSetting('theme', 'theme-oled');loadSettings()">OLED</button>
                     </div>
                 </div>
 
