--- a/settings.html
+++ b/settings.html
@@ -111,6 +111,13 @@
                     <div class="setting" style="display: flex; flex-direction: column; gap: 5px">
                         <div class="switch-wrapper">
                             <label class="switch">
+                                <input type="checkbox" id="editorShowHints" onchange="setSetting('editorShowHints', this.checked);" />
+                                <span class="slider"></span>
+                            </label>
+                            <span class="switch-text">Auto-complete</span>
+                        </div>
+                        <div class="switch-wrapper">
+                            <label class="switch">
                                 <input type="checkbox" id="editorLineNumbers" onchange="setSetting('editorLineNumbers', this.checked); location.reload()" />
                                 <span class="slider"></span>
                             </label>
@@ -220,8 +227,10 @@
                 txtFontTitle.value = getSetting("titleFont", "Ubuntu");
 
                 // editor
+                const cbxEditorShowHints = document.getElementById('editorShowHints');
                 const cbxEditorLineNumbers = document.getElementById("editorLineNumbers");
                 const cbxEditorDirection = document.getElementById("editorDirection");
+                if (getSetting("editorShowHints", "true") === "true") cbxEditorShowHints.checked = "true";
                 if (getSetting("editorLineNumbers", "false") === "true") cbxEditorLineNumbers.checked = "true";
                 if (getSetting("editorDirection", "rtl") === "rtl") cbxEditorDirection.checked = "true";
 
